test/expected/file-cast_x.out
cast x into
           ^
12: syntax error: "\n": "as", "into", or "to" expected
